manifests/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: #{SERVICE_NAME}#
spec:
    replicas: 1
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    selector:
        matchLabels:
            app: #{SERVICE_NAME}#
    template:
        metadata:
            labels:
                app: #{SERVICE_NAME}#
        spec:
            volumes:
                - name: "apis-dineros-service-account"
                  secret:
                    secretName: "apis-dineros-service-account"
            containers:
                - name: #{SERVICE_NAME}#
                  imagePullPolicy: Always
                  image: gcr.io/#{CLUSTER_PROJECT_ID}#/#{SERVICE_NAME}#:#{Build.BuildId}#
                  volumeMounts:
                    - name: "apis-dineros-service-account"
                      mountPath: "/var/secret"
                  ports:
                      - containerPort: 8080
                  resources:
                    limits:
                      cpu: 200m
                      memory: 240Mi
                    requests:
                      cpu: 100m
                      memory: 240Mi
